Afegit el camp DNI al CRUD d'usuaris, incloent la validació al service i la seva visualització al formulari i al llistat. També s'han ajustat les validacions d'entrada del formulari.